# transcribe-tool-wpr

./: .gitattributes  .gitignore  LICENSE  README.md  _diar_nemo.py  _diar_pyannote4.py  convert_to_md.py  diarizers.py  hf_patch.py  install.bat  pyproject.toml  rediarize.py  requirements.txt  run.py  status.py  transcribe.bat
src/transcribe_wpr/: __init__.py  cli.py  convert_to_md.py  diarizers.py  paths.py  rediarize.py  run.py  status.py
src/transcribe_wpr/data/: heavy_requirements.txt
