[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcribe-tool-wpr"
version = "1.0.0b6"
description = "Transcripcion en espanol con diarizacion seleccionable (WhisperX + pyannote/NeMo), afinada para GPUs NVIDIA de 4 GB."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "Isaac Alejandro Ortiz Zaldivar", email = "a24216345@alumnos.uady.mx" }]
keywords = ["whisper", "whisperx", "diarization", "pyannote", "nemo", "transcription", "asr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# Solo dependencias LIGERAS aqui. El stack pesado (torch+cu121, whisperx,
# pyannote, faster-whisper...) NO va aqui porque torch-cu121 necesita un indice
# propio que un paquete publicado no puede forzar; lo instala `transcribe --start`
# desde data/heavy_requirements.txt. Ver README (seccion Instalacion).
dependencies = ["platformdirs>=4"]

[project.scripts]
transcribe = "transcribe_wpr.cli:main"

[project.urls]
Homepage = "https://github.com/Ozia112/transcribe-tool-wpr"
Repository = "https://github.com/Ozia112/transcribe-tool-wpr"
Issues = "https://github.com/Ozia112/transcribe-tool-wpr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/transcribe_wpr"]

[tool.hatch.build.targets.wheel.force-include]
# Asegura que los archivos de datos viajen en el wheel (PyPI), no solo en git.
"src/transcribe_wpr/data/heavy_requirements.txt" = "transcribe_wpr/data/heavy_requirements.txt"

[tool.hatch.build.targets.sdist]
include = ["src/transcribe_wpr", "README.md", "LICENSE", "pyproject.toml"]
